name:               minghc
version:            0.1
cabal-version:      >= 1.10
build-type:         Simple
license:            MIT
license-file:       LICENSE
category:           Development
author:             Michael Snoyman <michael@snoyman.com>
maintainer:         Michael Snoyman <michael@snoyman.com>
copyright:          Michael Snoyman 2014-2015
synopsis:           Generate installers for GHC
description:
    Generate an installer for GHC, which bundles Cabal (so you can install stuff)
    and MSYS (so you can install network).
homepage:           https://github.com/fpco/minghc
bug-reports:        https://github.com/fpco/minghc/issues

source-repository head
    type:     git
    location: https://github.com/fpco/minghc.git

executable minghc-generate
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base == 4.*,
        directory,
        extra >= 0.8,
        shake >= 0.14,
        nsis >= 0.3,
        bytestring,
        http-client,
        http-client-tls

    other-modules:
        Installer
        Config
